<resources>

<!--region MAIN-->

    <string name="language">en-us</string>
    <!--<string name="version_name">It's on build.gradle as it was a @string/version_name</string>-->

    <string name="app">GeneratorUseCase</string>
    <string name="app_loading">Loading…</string>
    <string name="app_logout">Logout</string>
    <string name="app_menu">Menu</string>
    <string name="app_add">Add</string>
    <string name="app_export">Export</string>
    <string name="app_select">Select</string>
    <string name="app_persistedSuccessfully">Persisted Successfully!</string>
    <string name="app_confirmRemove">Are you sure you want to remove this item?</string>
    <string name="app_remove">Remove</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_passwordMustHaveAtleast6Chars">The password must have atleast 6 characters</string>
    <string name="app_onlyIfWantChangePassword">Fill this field only if you want to change the password</string>
    <string name="app_noDataToShow">No data to show</string>
    <string name="app_downloadCsv">Download CSV</string>
    <string name="app_search">Search</string>
    <string name="app_totalLines">%s total lines</string>
    <string name="app_version">Version</string>
    <string name="app_submit">Submit</string>
    <string name="app_currency">R$</string>

<!--endregion-->

<!--region FORMAT-->

    <string name="dateformat_date">yyyy/MM/dd</string>
    <string name="dateformat_datetime">yyyy/MM/dd HH:mm</string>
    <string name="dateformat_time">HH:mm</string>
    <string name="dateformat_time_h">HH'h'mm</string>
    <string name="dateformat_datemask">####/##/##</string>
    <string name="dateformat_datetimemask">####/##/## ##:##</string>
    <string name="dateformat_m_y">MM/yyyy</string>


    <string name="format_cpf">###.###.###-##</string>
    <string name="format_cnpj">##.###.###/####-##</string>
    <string name="format_rg">##.###.###-#</string>
    <string name="format_cep">#####-###</string>
    <string name="format_phone">(##) #####-####</string>
    <string name="format_money">R$ %.2f</string>
    <string name="format_creditcard">•••• %s</string>
    <string name="format_negative_money">- R$ %.2f</string>


<!--endregion-->

<!--region VALIDATION-->
    <string name="validate_cnpj">^$|\\d{2}\\.\\d{3}\\.\\d{3}\\/\\d{4}\\-\\d{2}</string>
    <string name="validate_phone">^$|\\(\\d{2}\\) \\d{5}\\-\\d{4}</string>
<!--endregion-->

<!--region ERROR-->
    <string name="error_unexpected">Unexpected Error</string>
    <string name="nao_foi_possivel_se_conectar_com_o_servidor">Não foi possível se conectar com o servidor. Tente novamente mais tarde</string>
    <string name="falha_ao_se_conectar_ao_servidor_verifique_se_o_app_esta_atualizado">Falha ao se conectar ao servidor. Verifique se o aplicativo está atualizado</string>
    <string name="erro_tentar_conectar_ao_servidor_verifique_se_o_app_esta_atualizado">Houve um erro ao tentar se conectar ao servidor. Verifique se o aplicativo está atualizado</string>
    <string name="realize_login_para_prosseguir">Realize o login ou crie uma conta para prosseguir</string>
    <string name="error_invalid_cnpj_format">Invalid CNPJ format</string>
    <string name="error_invalid_phone_format">Invalid phone number format</string>
    <string name="error_password">Senha precisa conter no minimo 8 caracteres e conter pelo menos 1 número e 1 letra.</string>
    <string name="error_email">E-mail inválido</string>
<!--endregion-->

<!--region TYPES-->

    <string name="boolean_true">True</string>
    <string name="boolean_false">False</string>
    <string name="number">Number</string>

<!--endregion-->

<!--region NAVIGATION-->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

<!--endregion-->

<!--region CONTEXT-->

    <!--region LOGIN-->
    <string name="login">Login</string>
    <string name="login_subtitle">Please sign in</string>
    <string name="login_account">Account</string>
    <string name="login_password">Password</string>
    <string name="login_signin">Sign in</string>
    <!--endregion-->

    <!--region HOME-->
    <string name="home">Home</string>
    <!--endregion-->

<!--endregion-->

<!--region MODEL-->

    <!--region CONECTADO-->
    <string name="c_conectado">Conectado</string>
    <string name="c_conectado_idConectadoPk">Id Conectado Pk</string>
    <string name="c_conectado_titulo">Titulo</string>
    <!--endregion-->

    <!--region CONECTORPRINCIPAL-->
    <string name="c_conectorprincipal">Conector Principal</string>
    <string name="c_conectorprincipal_conectado">Conectado</string>
    <string name="c_conectorprincipal_principal">Principal</string>
    <string name="c_conectorprincipal_titulo">Titulo</string>
    <!--endregion-->

    <!--region ENDERECO-->
    <string name="c_endereco">Endereco</string>
    <string name="c_endereco_idEnderecoPk">Id Endereco Pk</string>
    <string name="c_endereco_cep">Cep</string>
    <string name="c_endereco_zipcode">Zipcode</string>
    <string name="c_endereco_rua">Rua</string>
    <string name="c_endereco_nro">Nro</string>
    <string name="c_endereco_cidade">Cidade</string>
    <string name="c_endereco_uf">Uf</string>
    <string name="c_endereco_latitude">Latitude</string>
    <string name="c_endereco_longitude">Longitude</string>
    <!--endregion-->

    <!--region EXTENCAODOPRINCIPAL-->
    <string name="c_extensaodoprincipal">Extensao Do Principal</string>
    <string name="c_extensaodoprincipalprincipal">Principal</string>
    <string name="c_extensaodoprincipaltitulo">Titulo</string>
    <!--endregion-->

    <!--region GRUPODOPRINCIPAL-->
    <string name="c_grupodoprincipal">Grupo Do Principal</string>
    <string name="c_grupodoprincipal_idGrupoDoPrincipalPk">Id Grupo Do Principal Pk</string>
    <string name="c_grupodoprincipal_titulo">Titulo</string>
    <!--endregion-->

    <!--region ITEMDOPRINCIPAL-->
    <string name="c_itemdoprincipal">Item Do Principal</string>
    <string name="c_itemdoprincipal_principal">Principal</string>
    <string name="c_itemdoprincipal_idItemDoPrincipalPk">Id Item Do Principal Pk</string>
    <string name="c_itemdoprincipal_titulo">Titulo</string>
    <!--endregion-->

    <!--region PRINCIPAL-->
    <string name="c_principal">Principal</string>
    <string name="c_principal_grupoDoPrincipal">Grupo Do Principal</string>
    <string name="c_principal_grupoDoPrincipalFacultativo">Grupo Do Principal Facultativo</string>
    <string name="c_principal_idPrincipalPk">Id Principal Pk</string>
    <string name="c_principal_textoObrigatorio">Texto Obrigatorio</string>
    <string name="c_principal_textoFacultativo">Texto Facultativo</string>
    <string name="c_principal_decimalObrigatorio">Decimal Obrigatorio</string>
    <string name="c_principal_decimalFacultativo">Decimal Facultativo</string>
    <string name="c_principal_inteiroObrigatorio">Inteiro Obrigatorio</string>
    <string name="c_principal_inteiroFacultativo">Inteiro Facultativo</string>
    <string name="c_principal_booleanoObrigatorio">Booleano Obrigatorio</string>
    <string name="c_principal_booleanoFacultativo">Booleano Facultativo</string>
    <string name="c_principal_dataObrigatoria">Data Obrigatoria</string>
    <string name="c_principal_dataFacultativa">Data Facultativa</string>
    <string name="c_principal_datahoraObrigatoria">Datahora Obrigatoria</string>
    <string name="c_principal_datahoraFacultativa">Datahora Facultativa</string>
    <string name="c_principal_ativo">Ativo</string>
    <string name="c_principal_email">Email</string>
    <string name="c_principal_senha">Senha</string>
    <string name="c_principal_urlImagem">Url Imagem</string>
    <string name="c_principal_url">Url</string>
    <string name="c_principal_unico">Unico</string>
    <string name="c_principal_dataCriacao">Data Criacao</string>
    <string name="c_principal_dataAlteracao">Data Alteracao</string>
    <string name="c_principal_nome">Nome</string>
    <string name="c_principal_titulo">Titulo</string>
    <string name="c_principal_cpf">Cpf</string>
    <string name="c_principal_cnpj">Cnpj</string>
    <string name="c_principal_rg">Rg</string>
    <string name="c_principal_celular">Celular</string>
    <string name="c_principal_textoGrande">Texto Grande</string>
    <!--endregion-->

    <!--region TAG-->
    <string name="c_tag">Tag</string>
    <string name="c_tag_idTagPk">Id Tag Pk</string>
    <string name="c_tag_titulo">Titulo</string>
    <!--endregion-->

    <!--region TAGPRINCIPAL-->
    <string name="c_tagprincipal">Tag Principal</string>
    <string name="c_tagprincipal_tag">Tag</string>
    <string name="c_tagprincipal_principal">Principal</string>
    <!--endregion-->

    <!--region USER-->
    <string name="c_user">User</string>
    <string name="c_user_idUserPk">Id User Pk</string>
    <string name="c_user_email">Email</string>
    <string name="c_user_senha">Senha</string>
    <!--endregion-->

<!--endregion-->

</resources>
