<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="br.com.martinlabs.usecase.viewmodel.LoginVM" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/d20"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:text="@string/login_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:text="@={vm.loginHolder.account}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_account"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:text="@={vm.loginHolder.password}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:onClick="@{v -> vm.login()}"
            android:text="@{!vm.loading ? @string/login_signin : @string/app_loading}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:enabled="@{!vm.loading}"/>

    </LinearLayout>
</layout>
